# test-deploy-shuttle

./: Cargo.toml  README.md  Rocket.toml  docker-compose.yml
deploy/: Cargo.toml
migrations/2023-03-30-193909_create-user/: up.sql
migrations/2023-04-22-142008_create_projects/: up.sql
migrations/2023-04-22-143423_create_role/: down.sql  up.sql
migrations/2023-04-22-143827_create_project_user/: down.sql  up.sql
migrations/2023-04-24-162110_create_review/: down.sql  up.sql
migrations/2023-04-24-162909_create_notification/: down.sql  up.sql
migrations/2023-04-24-163742_create_achievement/: down.sql  up.sql
migrations/2023-04-24-164258_create_achievement_user/: down.sql  up.sql
migrations/2023-04-24-165052_create_user_friend/: down.sql  up.sql
migrations/2023-04-24-165258_create_user_invitation/: down.sql  up.sql
migrations/2023-04-24-165718_create_goal/: down.sql  up.sql
migrations/2023-04-24-170228_create_recent_change/: down.sql  up.sql
migrations/2023-04-24-170543_create_app/: down.sql  up.sql
migrations/2023-04-24-171635_create_docs/: down.sql  up.sql
migrations/2023-04-24-172249_create_kanban/: down.sql  up.sql
migrations/2023-04-24-172403_create_timeline/: down.sql  up.sql
migrations/2023-04-24-172503_create_board/: down.sql  up.sql
migrations/2023-04-24-172649_create_column/: down.sql  up.sql
migrations/2023-04-24-173043_create_task/: up.sql
migrations/2023-05-12-125140_create_project_user_activity/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/middlewares/: middlewares.rs
src/models/: models.rs
(+8 files in other folders)
