[package]
name = "rust-api-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.23.0"
diesel = {version = "2.0.1", features = ["numeric", "chrono"]}
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["diesel_postgres_pool"] }
serde = "1.0.140"
dotenvy = "0.15"
bcrypt = "0.13.0"
uuid = { version = "0.8.2", features = ["v4"] }
serde_json = "1.0.95"
jsonwebtoken = "8.3.0"
chrono = "0.4.24"
lettre = "0.10.4"
bigdecimal = {version = "0.3.0", features = ["serde"]}